<resources>
    <string name="app_name">电池管理 PowerPower</string>
    <string name="main_activity_name">电池管理 PowerPower</string>
    <string name="memory_clean">内存加速</string>
    <string name="battery_health">电池健康</string>
    <string name="power_analysis">耗电分析</string>
    <string name="settings">高级模式</string>
    <string name="button1">更多</string>
    <string name="temp">温度</string>
    <string name="vol">电压</string>
    <string name="health">健康状况</string>
    <string name="battery1">预计可用</string>
    <string name="state1">正在使用</string>
    <string name="state2">正在充电</string>
    <string name="state3">充电完成</string>
    <string name="title_activity_main">电池管理 PowerPower</string>
    <string name="title_activity_memory_clean">内存加速</string>
    <string name="title_activity_battery_health">电池健康</string>
    <string name="title_activity_power_analysis">耗电分析</string>
    <string name="title_activity_settings">高级模式</string>
    <string name="help_description">允许PowerPower使用无障碍服务，可以带来更强力的进程清理体验！</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <style name="ItemText">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textSize">18sp</item>
        <item name="android:gravity">left</item>
        <item name="android:textColor">@color/primary_light</item>
    </style>
</resources>
